# startup-radar-template

./: .gitignore  AGENTS.md  LICENSE  README.md  app.py  config.example.yaml  config_loader.py  connections.py  daily_run.py  database.py  deepdive.py  filters.py  main.py  models.py  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  settings.json
.claude/agents/filter-tuner/: SKILL.md
.claude/agents/source-implementer/: SKILL.md
.claude/hooks/: pre-commit-check.sh
.claude/rules/: sources.md
.claude/skills/: deepdive.md  setup-radar.md  setup.md
.claude/skills/deepdive/: SKILL.md
.claude/skills/radar/: SKILL.md
.claude/skills/radar-workspace/iteration-1/: benchmark.json  benchmark.md
.claude/skills/radar-workspace/iteration-1/eval-radar-broken/: eval_metadata.json
.claude/skills/radar-workspace/iteration-1/eval-radar-first-run/: eval_metadata.json
.claude/skills/radar-workspace/iteration-1/eval-radar-whats-new/: eval_metadata.json
.claude/skills/radar/evals/: evals.json
.claude/skills/research/: SKILL.md
.claude/skills/research-workspace/iteration-1/: benchmark.json  benchmark.md
.claude/skills/research-workspace/iteration-1/eval-research-anthropic/: eval_metadata.json
.claude/skills/research-workspace/iteration-1/eval-research-clay/: eval_metadata.json
.claude/skills/research/evals/: evals.json
.github/workflows/: daily.yml
docs/: AUDIT_FINDINGS.md  PRODUCTION_REFACTOR_PLAN.md
docs/operations/: data-branch.md
docs/plans/: phase-1.md  phase-13.md  phase-3.md  phase-5.md
scheduling/: crontab.example  launchd.plist.template  windows_task.md
sinks/: __init__.py  google_sheets.py
sources/: __init__.py  gmail.py  hackernews.py  rss.py  sec_edgar.py
startup_radar/: __init__.py  cli.py  filters.py  http.py  models.py
startup_radar/config/: __init__.py  loader.py  schema.py
startup_radar/parsing/: __init__.py  funding.py  normalize.py
startup_radar/research/: deepdive.py
startup_radar/sources/: __init__.py  base.py  gmail.py  hackernews.py  registry.py  rss.py  sec_edgar.py
tests/: conftest.py  test_filters.py  test_smoke.py
tests/config/: test_schema.py
tests/integration/: test_source_hackernews.py  test_source_rss.py  test_source_sec_edgar.py
tests/parsing/: test_funding.py  test_normalize.py
tests/unit/: test_http.py  test_smoke.py
