[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "startup-radar"
version = "0.1.0"
description = "Personal startup discovery radar with Streamlit dashboard"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "feedparser>=6.0.10",
    "beautifulsoup4>=4.12.0",
    "python-dateutil>=2.8.2",
    "pandas>=2.0.0",
    "streamlit>=1.30.0",
    "duckduckgo-search>=6.0.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
google = [
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "vcrpy>=6.0",
]

[tool.setuptools]
packages = [
    "startup_radar",
    "startup_radar.sources",
    "startup_radar.parsing",
]
py-modules = [
    "main", "daily_run", "app", "deepdive",
    "database", "filters",
    "config_loader", "connections",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "build", "dist", "reports", "logs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",   # line length — let formatter handle
    "E722",   # bare except — Phase 4 will replace with structured logging
    "B904",   # raise from — same
    "B007",   # unused loop var — common in pandas iterrows
    "UP006",  # PEP585 — keep `list[T]` style consistency
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "B011"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
files = ["startup_radar/models.py", "startup_radar/parsing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "integration: requires network or external services",
]
